Use inline-block for code so it scrolls on smaller devices

--- a/packages/web/styles/articleInnerStyling.css
+++ b/packages/web/styles/articleInnerStyling.css
@@ -293,6 +293,8 @@ on smaller screens we display the note icon
 
 .article-inner-css pre,
 .article-inner-css code {
+  display: inline-block;
+  vertical-align: bottom;
   word-wrap: initial;
   font-family: 'SF Mono', monospace !important;
   white-space: pre;
