Set root color scheme CSS for iOS to determine system colour

--- a/packages/web/styles/articleInnerStyling.css
+++ b/packages/web/styles/articleInnerStyling.css
@@ -2,6 +2,10 @@
   max-width: 100%;
 }
 
+:root {
+  color-scheme: light dark;
+}
+
 .highlight {
   color: var(--colors-highlightText);
   background-color: var(--colors-highlightBackground);
