--- a/packages/web/styles/sliderstyles.css
+++ b/packages/web/styles/sliderstyles.css
@@ -3,7 +3,7 @@
   appearance: none;
   width: 100%;
   height: 1px;
-  background: hsla(47, 4%, 84%);
+  background: var(--colors-grayBorderHover);
 }
   
 .slider::-webkit-slider-thumb {
@@ -17,9 +17,19 @@
 }
   
 .slider::-moz-range-thumb {
+  -webkit-appearance: none;
   width: 16px !important;
   height: 16px;
   border-radius: 50%;
   background: var(--colors-utilityTextContrast);
   cursor: pointer;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: none;
+  height: 16px;
+  width: 16px;
+  border-radius: 50%;
+  background: var(--colors-grayTextContrast);
 }
