--- a/apple/OmnivoreKit/Sources/Views/Resources/fonts.css
+++ b/apple/OmnivoreKit/Sources/Views/Resources/fonts.css
@@ -2,28 +2,28 @@
   font-family: 'Inter';
   font-weight: 200;
   font-style: normal;
-  src: url('Inter-ExtraLight-200.ttf');
+  src: url('Inter-ExtraLight.ttf');
 }
 
 @font-face {
   font-family: 'Inter';
   font-weight: 300;
   font-style: normal;
-  src: url('Inter-Light-300.ttf');
+  src: url('Inter-Light.ttf');
 }
 
 @font-face {
   font-family: 'Inter';
   font-weight: 400;
   font-style: normal;
-  src: url('Inter-Regular-400.ttf');
+  src: url('Inter-Regular.ttf');
 }
 
 @font-face {
   font-family: 'Inter';
   font-weight: 500;
   font-style: normal;
-  src: url('Inter-Medium-500.ttf');
+  src: url('Inter-Medium.ttf');
 }
 
 @font-face {
@@ -37,26 +37,26 @@
   font-family: 'Inter';
   font-weight: 600;
   font-style: normal;
-  src: url('Inter-SemiBold-600.ttf');
+  src: url('Inter-SemiBold.ttf');
 }
 
 @font-face {
   font-family: 'Inter';
   font-weight: 700;
   font-style: normal;
-  src: url('Inter-Bold-700.ttf');
+  src: url('Inter-Bold.ttf');
 }
 
 @font-face {
   font-family: 'Inter';
   font-weight: 800;
   font-style: normal;
-  src: url('Inter-ExtraBold-800.ttf');
+  src: url('Inter-ExtraBold.ttf');
 }
 
 @font-face {
   font-family: 'Inter';
   font-weight: 900;
   font-style: normal;
-  src: url('Inter-Black-900.ttf');
+  src: url('Inter-Black.ttf');
 }
