--- a/apple/OmnivoreKit/Sources/Views/Resources/fonts.css
+++ b/apple/OmnivoreKit/Sources/Views/Resources/fonts.css
@@ -1,3 +1,25 @@
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  line-height: 1.6;
+  font-size: 18px;
+}
+
+.disable-webkit-callout {
+  -webkit-touch-callout: none;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 @font-face {
   font-family: 'Inter';
   font-weight: 200;
