Remove default button padding, on Safari this caused extra padding on dropdown triggers

--- a/packages/web/styles/globals.css
+++ b/packages/web/styles/globals.css
@@ -135,3 +135,8 @@ input[type=range]::-webkit-slider-thumb {
   border-radius: 50%;
   background: var(--colors-grayTextContrast);
 }
+
+button {
+  padding: 0px;
+  margin: 0px;
+}
