--- a/packages/web/styles/globals.css
+++ b/packages/web/styles/globals.css
@@ -82,6 +82,195 @@ div#appleid-signin {
 }
 
 @font-face {
+  font-family: "Lyon";
+  font-weight: 400;
+  font-style: normal;
+  src: url('/static/fonts/Lyon/Lyon-Text-Regular.otf');
+}
+
+@font-face {
+  font-family: "Lyon";
+  font-weight: 400;
+  font-style: italic;
+  src: url('/static/fonts/Lyon/Lyon-Text-Regular-Italic.otf');
+}
+
+@font-face {
+  font-family: "Lyon";
+  font-weight: 500;
+  font-style: normal;
+  src: url('/static/fonts/Lyon/Lyon-Text-Regular-No.2.otf');
+}
+
+@font-face {
+  font-family: "Lyon";
+  font-weight: 500;
+  font-style: italic;
+  src: url('/static/fonts/Lyon/Lyon-Text-Regular-No.2-Italic.otf');
+}
+
+@font-face {
+  font-family: "Lyon";
+  font-weight: 600;
+  font-style: normal;
+  src: url('/static/fonts/Lyon/Lyon-Text-Semibold.otf');
+}
+
+@font-face {
+  font-family: "Lyon";
+  font-weight: 600;
+  font-style: italic;
+  src: url('/static/fonts/Lyon/Lyon-Text-Semibold-Italic.otf');
+}
+
+@font-face {
+  font-family: "Lyon";
+  font-weight: 700;
+  font-style: normal;
+  src: url('/static/fonts/Lyon/Lyon-Text-Bold.otf');
+}
+
+@font-face {
+  font-family: "Lyon";
+  font-weight: 700;
+  font-style: italic;
+  src: url('/static/fonts/Lyon/Lyon-Text-Bold-Italic.otf');
+}
+
+@font-face {
+  font-family: "Lyon";
+  font-weight: 900;
+  font-style: normal;
+  src: url('/static/fonts/Lyon/Lyon-Text-Black.otf');
+}
+
+@font-face {
+  font-family: "Lyon";
+  font-weight: 900;
+  font-style: italic;
+  src: url('/static/fonts/Lyon/Lyon-Text-Black-Italic.otf');
+}
+
+@font-face {
+  font-family: "Tisa";
+  font-weight: 100;
+  font-style: normal;
+  src: url('/static/fonts/Tisa/Tisa-Sans-Pro-Thin.ttf'); 
+}
+
+@font-face {
+  font-family: "Tisa";
+  font-weight: 100;
+  font-style: italic;
+  src: url('/static/fonts/Tisa/Tisa-Sans-Pro-Thin-Italic.ttf');
+}
+
+@font-face {
+  font-family: "Tisa";
+  font-weight: 300;
+  font-style: normal;
+  src: url('/static/fonts/Tisa/Tisa-Sans-Pro-Light.ttf');
+}
+
+@font-face {
+  font-family: "Tisa";
+  font-weight: 300;
+  font-style: italic;
+  src: url('/static/fonts/Tisa/Tisa-Sans-Pro-Light-Italic.ttf');
+}
+
+@font-face {
+  font-family: "Tisa";
+  font-weight: 400;
+  font-style: normal;
+  src: url('/static/fonts/Tisa/Tisa-Sans-Pro-Regular.ttf');
+}
+
+@font-face {
+  font-family: "Tisa";
+  font-weight: 500;
+  font-style: normal;
+  src: url('/static/fonts/Tisa/Tisa-Sans-Pro-Medium.ttf');
+}
+
+@font-face {
+  font-family: "Tisa";
+  font-weight: 500;
+  font-style: italic;
+  src: url('/static/fonts/Tisa/Tisa-Sans-Pro-Medium-Italic.ttf');
+}
+
+@font-face {
+  font-family: "Tisa";
+  font-weight: 600;
+  font-style: normal;
+  src: url('/static/fonts/Tisa/Tisa-Sans-Pro-Semibold.ttf');
+}
+
+@font-face {
+  font-family: "Tisa";
+  font-weight: 600;
+  font-style: italic;
+  src: url('/static/fonts/Tisa/Tisa-Sans-Pro-Semibold-Italic.ttf');
+}
+
+@font-face {
+  font-family: "Tisa";
+  font-weight: 700;
+  font-style: normal;
+  src: url('/static/fonts/Tisa/Tisa-Sans-Pro-Bold.ttf');
+}
+
+@font-face {
+  font-family: "Tisa";
+  font-weight: 700;
+  font-style: italic;
+  src: url('/static/fonts/Tisa/Tisa-Sans-Pro-Bold-Italic.ttf');
+}
+
+@font-face {
+  font-family: "Tisa";
+  font-weight: 900;
+  font-style: normal;
+  src: url('/static/fonts/Tisa/Tisa-Sans-Pro-Black.ttf');
+}
+
+@font-face {
+  font-family: "Tisa";
+  font-weight: 900;
+  font-style: italic;
+  src: url('/static/fonts/Tisa/Tisa-Sans-Pro-Black-Italic.ttf');
+}
+
+@font-face {
+  font-family: 'Merriweather';
+  font-style: normal;
+  font-weight: 300;
+  src: url('/static/fonts/Merriweather/merriweather-v21-latin-300.woff');
+}
+
+@font-face {
+  font-family: 'Merriweather';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/static/fonts/Merriweather/merriweather-v21-latin-regular.woff');
+}
+
+@font-face {
+  font-family: 'Merriweather';
+  font-style: normal;
+  font-weight: 700;
+  src: url('/static/fonts/Merriweather/merriweather-v21-latin-700.woff');
+}
+
+@font-face {
+  font-family: 'Merriweather';
+  font-style: normal;
+  font-weight: 900;
+  src: url('/static/fonts/Merriweather/merriweather-v21-latin-900.woff');
+}
+
+@font-face {
   font-family: 'SF Mono';
   font-weight: 400;
   font-style: normal;
