Use a Radix dialog instead of dropdown, add OpenDyslexic font, prefetch fonts
The main change here is using Dialog instead of dropdown. The
dialog uses a fixed position, so when the underlying document
dimensions change based on a font change, the dialog will still
be positioned properly.

--- a/packages/web/styles/globals.css
+++ b/packages/web/styles/globals.css
@@ -187,6 +187,27 @@ div#appleid-signin {
 }
 
 @font-face {
+  font-family: 'OpenDyslexic';
+  font-weight: 400;
+  font-style: normal;
+  src: url('/static/fonts/OpenDyslexic/OpenDyslexicAlta-Regular.otf');
+}
+
+@font-face {
+  font-family: 'OpenDyslexic';
+  font-weight: 700;
+  font-style: normal;
+  src: url('/static/fonts/OpenDyslexic/OpenDyslexicAlta-Bold.otf');
+}
+
+@font-face {
+  font-family: 'OpenDyslexic';
+  font-weight: 400;
+  font-style: italic;
+  src: url('/static/fonts/OpenDyslexic/OpenDyslexicAlta-Italic.otf');
+}
+
+@font-face {
   font-family: 'Source Serif Pro';
   font-weight: 400;
   font-style: normal;
