--- a/packages/web/styles/menu.css
+++ b/packages/web/styles/menu.css
@@ -5,6 +5,11 @@
   color: var(--colors-utilityTextDefault);
 }
 
+.pro-sidebar .pro-menu > ul > .pro-sub-menu > .pro-inner-list-item {
+  color: var(--colors-utilityTextDefault);
+  background-color: var(--colors-libraryBackground);
+}
+
 .pro-sidebar .pro-menu a:hover {
   color: var(--colors-utilityTextDefault);
 }
