Removing animation and hover effect

--- a/packages/web/styles/menu.css
+++ b/packages/web/styles/menu.css
@@ -18,10 +18,9 @@
   padding: 8px 20px 3px 20px;
 }
 
-/* .pro-sidebar .pro-menu .active > .pro-inner-item {
-  background-color: #F8F8F8;
-  border-radius: 8px;
-} */
+.pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item:hover  {
+    color: var(--colors-utilityTextDefault);
+}
 
 .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item > .pro-icon-wrapper {
   width: 20px;
