Use a ModalBottomSheet for saving on Android

--- a/android/Omnivore/app/src/main/res/values/colors.xml
+++ b/android/Omnivore/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="cloud">#F7F7F7</color>
+    <color name="gray_B7B7B7">#B7B7B7</color>
 </resources>
