--- a/packages/web/styles/menu.css
+++ b/packages/web/styles/menu.css
@@ -21,6 +21,10 @@
   color: var(--colors-utilityTextDefault);
 }
 
+.pro-sidebar .pro-menu .pro-menu-item {
+  padding: 2px 0;
+}
+
 .pro-menu .pro-menu-item > .pro-inner-item {
   padding: 5px 20px;
 }
@@ -41,9 +45,7 @@
 
 .pro-sidebar .pro-menu .pro-menu-item.active,
 .pro-sidebar .pro-menu a:hover,
-.pro-sidebar
-  .pro-menu
-  .pro-menu-item:hover:not(.pro-sub-menu) {
+.pro-sidebar .pro-menu .pro-menu-item:hover:not(.pro-sub-menu) {
   background-color: var(--colors-libraryActiveMenuItem);
   width: 95%;
   border-radius: 5px;
@@ -58,7 +60,12 @@
   animation-play-state: paused;
 }
 
-.pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu > .pro-inner-item > .pro-arrow-wrapper .pro-arrow {
+.pro-sidebar
+  .pro-menu
+  .pro-menu-item.pro-sub-menu
+  > .pro-inner-item
+  > .pro-arrow-wrapper
+  .pro-arrow {
   border-width: 0 1px 1px 0;
   border-color: var(--colors-textSubtle);
 }
