use local state to track email/authProvider signin

--- a/android/Omnivore/app/src/main/res/values/themes.xml
+++ b/android/Omnivore/app/src/main/res/values/themes.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Omnivore" parent="android:Theme.Material.Light">
-
+    <style name="Theme.Omnivore" parent="android:Theme.Material.Light.NoActionBar">
     </style>
 
     <style name="Theme.AppCompat.Translucent" parent="Theme.AppCompat.NoActionBar">
