adding the basic css to display the list

--- a/packages/web/styles/menu.css
+++ b/packages/web/styles/menu.css
@@ -1,5 +1,7 @@
 /* Menu Override styles */
-
+.pro-sidebar {
+  z-index: 1;
+}
 .pro-sidebar > .pro-sidebar-inner,
 .pro-menu,
 .pro-menu > ul > .pro-sub-menu > .pro-inner-list-item,
