WIP: fetch speech files, show some follow along

--- a/packages/web/styles/articleInnerStyling.css
+++ b/packages/web/styles/articleInnerStyling.css
@@ -6,6 +6,11 @@
   color-scheme: light dark;
 }
 
+.speakingSection {
+  color: var(--colors-highlightText);
+  background-color: rgba(255, 210, 52, 0.2);
+}
+
 .highlight {
   color: var(--colors-highlightText);
   background-color: var(--colors-highlightBackground);
