Compact list view completion

--- a/packages/web/styles/globals.css
+++ b/packages/web/styles/globals.css
@@ -310,7 +310,7 @@ button {
   background-clip: padding-box;
 }
 
-.omnivore-masonry-grid_column > div {
-  /* background: grey; */
+/* .omnivore-masonry-grid_column > div {
+  background: grey;
   margin-bottom: 16px;
-}
+} */
