attempt to add pspdfkit toolbars

--- a/android/Omnivore/app/src/main/res/layout/pdf_reader_fragment.xml
+++ b/android/Omnivore/app/src/main/res/layout/pdf_reader_fragment.xml
@@ -33,4 +33,37 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="invisible"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|center"
+        android:background="@color/design_default_color_primary"
+        android:orientation="vertical"
+        android:splitMotionEvents="false">
+
+        <ImageView
+            android:id="@+id/openSearchButton"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="?android:attr/selectableItemBackground"
+            android:padding="12dp"
+            android:src="@drawable/pspdf__ic_search" />
+
+        <ImageView
+            android:id="@+id/openOutlineButton"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="?android:attr/selectableItemBackground"
+            android:padding="12dp"
+            android:src="@drawable/pspdf__ic_outline" />
+
+        <ImageView
+            android:id="@+id/openThumbnailGridButton"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="?android:attr/selectableItemBackground"
+            android:padding="12dp"
+            android:src="@drawable/pspdf__ic_thumbnails" />
+    </LinearLayout>
 </FrameLayout>
