Fixup some styling for embedded tweets
- Improves username links, embedded links, and photos

--- a/packages/web/styles/articleInnerStyling.css
+++ b/packages/web/styles/articleInnerStyling.css
@@ -372,7 +372,7 @@ on smaller screens we display the note icon
   margin: 32px auto;
   border: 1px solid #e0e0e0;
   direction: ltr;
-  border-radius: 8;
+  border-radius: 8px;
   padding: 16px 16px ;
   box-sizing: border-box;
   -webkit-font-smoothing: subpixel-antialiased;
@@ -393,7 +393,6 @@ on smaller screens we display the note icon
   display: flex;
   flex-direction: column;
   color: #0F1419 !important;
-  color: #496F72;
   font-size: 14px;
   line-height: 20px;
 }
@@ -407,7 +406,7 @@ on smaller screens we display the note icon
 }
 
 
-._omnivore-static-tweet-header .tweet-fake-link {
+._omnivore-static-tweet ._omnivore-static-tweet-fake-link {
   color: #1da1f2;
 }
 
@@ -418,9 +417,6 @@ on smaller screens we display the note icon
 }
 
 ._omnivore-static-tweet ._omnivore-static-tweet-link-top {
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
   text-decoration: none;
 }
 
@@ -482,4 +478,66 @@ on smaller screens we display the note icon
   color: #808080;
   font-size: 14px;
   line-height: 20px;
+}
+
+._omnivore-static-tweet ._omnivore-static-tweet-photo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 2px;
+}
+
+._omnivore-static-tweet .expanded-link {
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
+  border: 1px solid #e0e0e0;
+  border-radius: 8px;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+._omnivore-static-tweet .expanded-link-img {
+  cursor: pointer;
+  width: 100%;
+  max-height: 280px;
+  max-width: 100%;
+  object-fit: cover;
+  margin: 0px auto !important
+}
+
+._omnivore-static-tweet .expanded-link img {
+  margin: 0px auto !important
+}
+
+._omnivore-static-tweet .expanded-link-bottom {
+  display: flex;
+  flex-direction: column;
+  padding: 12px;
+  gap: 2px;
+  font-size: 14px;
+  line-height: 20px;
+  text-decoration: none;
+}
+
+.expanded-link-bottom .expanded-link-domain {
+  color: #808080;
+  text-transform: lowercase;
+  text-decoration: none;
+}
+
+.expanded-link-bottom .expanded-link-title {
+  color: #0F1419 !important;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+}
+
+.expanded-link-bottom .expanded-link-description {
+  color: #808080;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
 }
