--- a/android/Omnivore/app/src/main/res/menu/pdf_text_selection_menu.xml
+++ b/android/Omnivore/app/src/main/res/menu/pdf_text_selection_menu.xml
@@ -2,8 +2,8 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/delete"
-        android:title="@string/pdf_remove_highlight"
+        android:id="@+id/createHighlight"
+        android:title="@string/pdf_highlight_menu_action"
         app:showAsAction="always">
     </item>
 
