--- a/packages/web/styles/globals.css
+++ b/packages/web/styles/globals.css
@@ -377,3 +377,18 @@ button {
   background: grey;
   margin-bottom: 16px;
 } */
+
+.ProgressRoot {
+  overflow: hidden;
+  background: var(--colors-omnivoreGray);
+  border-radius: 99999px;
+  height: 25px;
+  transform: translateZ(0);
+}
+
+.ProgressIndicator {
+  background-color: var(--colors-omnivoreCtaYellow) ;
+  width: 100%;
+  height: 100%;
+  transition: transform 660ms cubic-bezier(0.65, 0, 0.35, 1);
+}
